# logical-roles-bot

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  logical-roles-bot
inc/: bot.hpp  parser.hpp  role.hpp  user.hpp
src/: bot.cpp  main.cpp
